<resources>
    <string name="app_name">Movies Manager</string>
    <string name="empty_subject_message">You must enter movie subject</string>
    <string name="main_screen_label">Movies List</string>
    <string name="main_screen_menu_remove_item_text">Remove All</string>
    <string name="main_screen_menu_exit_item_text">Exit</string>
    <string name="options_dialog_title">Options</string>
    <string name="edit_movie_text">Edit Movie</string>
    <string name="delete_movie_text">Remove Movie</string>
    <string name="warning_title_text">Warning</string>
    <string name="delete_one_movie_warning_message">You really want to delete this movie</string>
    <string name="delete_all_movies_warning_message">You really want to delete all movies</string>
    <string name="positive_button_text">OK</string>
    <string name="negative_button_text">CANCEL</string>
    <string name="subject_label_text">Subject</string>
    <string name="store_hint_text">Type here...</string>
    <string name="body_label_text">Body</string>
    <string name="year_label_text">Year</string>
    <string name="default_store_movie_title">Add New Movie</string>
    <string name="show_button_text">Show</string>
    <string name="url_label_text">Image URL</string>
    <string name="image_menu_store_item_text">Store Image</string>
    <string name="image_menu_store_to_gallery_item_text">Store Image To Gallery</string>
    <string name="image_menu_upload_gallery_image_item">Upload from Gallery</string>
    <string name="image_menu_header">Image Options</string>
    <string name="default_store_movie_label">Add New Movie</string>
    <string name="store_movie_menu_item">Store</string>
    <string name="invalid_url_message">Url not valid!!!</string>
    <string name="invalid_year_message">Year Not Valid!!!</string>
    <string name="invalid_file_name_message">File name not valid!!!</string>
    <string name="empty_image_message">Image not exist!!!</string>
    <string name="search_movies_label">Movies Search</string>
    <string name="search_string_hint">Insert search string here</string>
    <string name="empty_search_string_message">You must enter search string!!!</string>
    <string name="invalid_image_data_message">Invalid image data!!!</string>
    <string name="not_movie_found_message">Movie not found!!!</string>
    <string name="disable_store_message">Could not store image!!!</string>
    <string name="empty_url_image_message">You must enter image url or file name to store!!!</string>
    <string name="empty_file_name_message">File name not exist in url!!!</string>
    <string name="watched_movie_option_text">Set movie as watched</string>
    <string name="store_movie_image_message">could mot store only image</string>
    <string name="add_movie_rate_option_text">Add Rate to Movie</string>
    <string name="share_image_option_text">Share Image</string>
    <string name="share_image_error_message">Share Image Failed!!</string>
    <string name="warning_to_store_data_text">Don\'t forget to store data</string>
    <string name="already_stored_image_message">Image already stored!!!</string>
    <string name="empty_movies_storage_message">Movies List Empty!!!</string>
    <string name="movies_list_settings_key">movies_list_settings</string>
    <string name="movies_list_settings_title_text">Movies List Settings</string>
    <string name="search_movies_settings_key">search_movies_settings</string>
    <string name="search_movies_settings_title_text">Search Movies Settings</string>
    <string name="list_enable_watched_key">list_watched_enable</string>
    <string name="list_enable_watched_title">Watched Enable</string>
    <string name="list_enable_watched_on_text">Disable watched</string>
    <string name="list_enable_watched_off_text">Enable watched</string>
    <string name="search_enable_watched_key">search_watched_enable</string>
    <string name="search_enable_watched_title">Watched Enable</string>
    <string name="search_enable_watched_on_text">Disable watched</string>
    <string name="search_enable_watched_off_text">Enable watched</string>
    <string name="list_enable_year_key">list_year_enable</string>
    <string name="enable_year_title">Year Enable</string>
    <string name="enable_year_on_text">Disable Year</string>
    <string name="enable_year_off_text">Enable Year</string>
    <string name="search_enable_year_key">search_year_enable</string>
    <string name="list_enable_rate_key">list_rate_enable</string>
    <string name="enable_rate_title">Movie Rate Enable</string>
    <string name="enable_rate_on_text">Disable Rate</string>
    <string name="enable_rate_off_text">Enable Rate</string>
    <string name="search_enable_rate_key">search_rate_enable</string>
    <string name="settings_item_text">Settings</string>
    <string name="preferences_label_text">Preferences</string>
    <string name="movies_list_image_shapes_list_key">list_shapes_list</string>
    <string name="web_search_image_shapes_list_key">web_search_shapes_list</string>
    <string name="image_shapes_list_title">Image Shapes</string>
    <string name="image_shapes_list_summary">Choose Your Image Shape</string>
    <string name="movie_exist_message">Movie Already Exist!!!</string>
    <string name="order_list_title">Movies Order</string>
    <string name="order_list_summary">Set Order of Movies</string>
    <string name="movies_list_order_list_key">movies_list_order_key</string>
    <string name="web_search_order_list_key">web_search_order_key</string>
    <string name="restore_item_text">Restore</string>
    <string name="db_search_label_text">DB Search</string>
    <string name="db_search_movies_settings_key">db_search_settings</string>
    <string name="db_search_movies_settings_title_text">DB Search Settings</string>
    <string name="db_search_enable_watched_key">db_search_enable_watched_key</string>
    <string name="db_search_enable_year_key">db_search_enable_year_key</string>
    <string name="db_search_image_shapes_list_key">db_search_image_shapes_list_key</string>
    <string name="db_search_enable_rate_key">db_search_enable_rate_key</string>
    <string name="db_search_order_list_key">db_search_order_list_key</string>
    <string name="custom_layout_tag_text">custom layout</string>
    <string name="add_movie_success_message">New Movie Added!</string>
    <string name="add_movie_failed_message">Movie Addition Failed!</string>
    <string name="edit_movie_success_message">Movie Edited!</string>
    <string name="edit_movie_failed_message">Movie Edition Failed!</string>
    <string name="no_change_detected_message">No Changes Detected!!!</string>
    <string name="movie_deleted_message">Movie deleted!</string>
    <string name="movie_list_deleted_message">Movies Group Deleted!</string>
    <string name="all_movies_deleted_message">All Movies Deleted!</string>
    <string name="movies_back_message">Movies Returned!</string>
    <string name="clear_button_text">Clear</string>
    <string name="invalid_query_message">Invalid Query</string>
</resources>
